--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 896789583465938978
 textchannel = 896789583465938977
 ladderchannel = 
 jungsanchannel = 
