--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 896789583465938978
 textchannel = 896789583465938977
-ladderchannel = 
+ladderchannel = 951368187298066482
 jungsanchannel = 
 killchannel = 
 racingchannel = 
